Mobile Nav - Fix wee spacing issue

--- a/src/scss/layout/_mobile-menu.scss
+++ b/src/scss/layout/_mobile-menu.scss
@@ -71,7 +71,7 @@
   .sitemenu-2 {
     li a {
       position: relative;
-      overflow: auto;
+      overflow: none;
       left: -650px;
       animation: slideLeft 0.5s forwards;
       animation-delay: 0s;
